--- a/assets/style.css
+++ b/assets/style.css
@@ -1,7 +1,7 @@
 /* Base */
 html {
-	font-family: georgia, sans-serif;
-	background-color: #fefcfe;
+  font-family: georgia, sans-serif;
+  background-color: #fff;
 }
 
 body {
@@ -10,13 +10,14 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  margin: 2em 0px 0.7em;
+  margin: 2em 0 0.7em;
 }
 
+
+/* Text */
 h1 {
   font-size: 3em;
   font-style: italic;
-  font-
 }
 h2 {
   font-size: 2em;
@@ -26,21 +27,14 @@ h3 {
   font-size: 1.3em;
 }
 
-header, footer {
-  text-align: center;
-}
-
-footer {
-  border-top-style: solid;
-  border-top-width: thin;
-  margin: auto;
-}
-
 
 /* Helpers */
 .mainblock {
-  padding: 2em;
+  padding: 5%;
   overflow: auto;
+}
+
+.divider-top {
 }
 
 .floatright {
@@ -50,33 +44,44 @@ footer {
 
 .floatleft {
   float: left;
-  maring-right; 1em;
+  margin-right: 1em;
 }
 
 
-/* Header */
-header h1 {
+/* Page Header */
+.page-header {
+  background-color: #022e00;
+  color: #f5f5f5;
+  text-align: center;
+}
+
+.page-header-h1 {
   font-size: 4em;
   margin: 0.5em;
   font-variant: small-caps;
   font-style: normal;
 }
 
-header {
-  background-color: #022e00;
-  color: #f5f5f5;
+
+/* Page Footer */
+.page-footer {
+  text-align: center;
+  border-top-style: solid;
+  border-top-width: thin;
+  margin: auto;
 }
 
+
 /* Main */
-#main {
+.page-main {
   max-width: 40em;
   margin: auto;
 }
 
+
 /* Table (taken from github, the readme css)*/
 table {
   display: block;
-  width: 100%;
   overflow: auto;
   word-break: normal;
   word-break: keep-all;
@@ -98,5 +103,5 @@ table tr {
 }
 
 table tr:nth-child(2n) {
-  background-color: #f8f8f8;
+  background-color: #f3f3f3;
 }
